welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: warning: enclosing method creeTableau has result type Unit: return value discarded
  return T
  ^Array1:34: error: not found: value T
    setCouleurBrosse(T(i-1))
                     ^