welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  creeTableau()
  for (i <- 1 to getMondeLargeur()) 
  {
    gauche()
    avance()
    droite()
    avance()
    creePattern()
  }
}

def creeTableau()
{
  var T = new Array[Color](getMondeHauteur())
  for (i <- 1 to getMondeHauteur()) 
  {
    T(i-1)=getCouleurSol()
  }
  return T
}

def peindre()
{
  baisseBrosse()
  leveBrosse()
}

def creePattern()
{
  for (i <- 1 to getMondeHauteur()) 
  {
    setCouleurBrosse(T(i-1))
    peindre()
    avance()
  }
}